// Copyright 2020 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
syntax = "proto3";

package recipe_modules.build.chromium_tests;

message InputProperties {
  reserved 1;
  reserved "bucketed_triggers";

  // Maps LUCI projects declared in recipe BuilderSpecs to the LUCI project to
  // use when triggering builders.
  //
  // For branch CI support using separate projects for milestones, there will be
  // builders in different projects that use the same BuilderSpec instance. The
  // BuilderSpec indicates the LUCI project associated with the builder. The
  // recipe-declared project for a builder will only be accurate for the main
  // version of the builder, not the branched versions of the builder. This
  // property corrects the inaccuracy by mapping the project on a BuilderSpec to
  // the actual project to use.
  //
  // Example: (builder_group='chromium.linux', buildername='Linux Tests') sets
  //   its parent to (builder_group='chromium.linux', buildername='Linux
  //   Builder'). When 'Linux Builder' runs, it triggers 'Linux Tests'. The
  //   BuilderSpec for 'Linux Tests' has 'chromium' as the value of its
  //   luci_project attribute, so by default it triggers the 'Linux Tests' job
  //   in project 'chromium'. If the properties maps 'chromium' to
  //   'chromium-m86', then instead the 'Linux Tests' job in project
  //   'chromium-m86' will be triggered.
  map<string, string> project_trigger_overrides = 2;

  // Maps a checkout-relative path to the actual revision to check out for the
  // repo that gets checked out to that path. The revision information is
  // provided by the JSON output of bot_update based on which revisions are
  // specified by the gitiles input and/or the gclient config, not the contents
  // of the DEPS file.
  //
  // Example:
  //   'GPU FYI Linux Builder' gets the revision for src from the gitiles input
  //   and floats src/third_party/angle to 'HEAD'. It ends up checking out
  //   revisions X and Y respectively. To ensure the testers check out the same
  //   revisions, it adds the entries 'src': X and 'src/third_party/angle': Y.
  //   The tester will override the gclient config for those paths to get the
  //   same version.
  map<string, string> fixed_revisions = 3;
}
